--- a/src/pages/registerPage/register-page.css
+++ b/src/pages/registerPage/register-page.css
@@ -77,18 +77,15 @@
   width: calc(100% - 3rem);
   margin: 1rem 0;
   border-radius: 0.25rem;
-  border: 1px solid #fff;
+  border: 1.5px solid #fff;
   outline: none;
+  font-size: 1rem;
   background: rgba(255, 255, 255, 0.03);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-.form-container form input:hover {
-outline: 2px solid #fff;
-}
-
 .form-container form label {
-  font-size: 0.875rem;
+  font-size: 0.975rem;
 }
 
 .select-container {
@@ -104,7 +101,7 @@ outline: 2px solid #fff;
   select {
     width: 100%; 
   padding: 1rem; 
-  border: 1px solid #ccc; 
+  border: 1.5px solid #ccc; 
   border-radius: 5px; 
   background: transparent; 
   font-size: 1rem; 
@@ -112,6 +109,7 @@ outline: 2px solid #fff;
   outline: none; 
   cursor: pointer;
   margin-bottom: 1rem;
+  font-size: 1.2rem;
   }
 
   select option {
@@ -144,7 +142,7 @@ span.error-message {
 }
 
 .input-container.focused input:invalid {
-  border: 1px solid var(--red);
+  border: 1.5px solid var(--red);
 }
 
 .input-container.focused input::placeholder {
@@ -202,7 +200,7 @@ form .btn .button {
   .register {
     display: flex;
     flex-direction: column;
-    padding: 5rem 4rem 5rem 4rem;
+    padding: 6rem 5rem 6rem 5rem;
     gap: 7%;
     justify-content: space-between;
   }
@@ -220,10 +218,9 @@ form .btn .button {
   }
   
   .register .form-container {
-    border: 1px solid red;
     margin-right: 0rem;
     padding: 7rem 0rem 6rem 0rem;
-    width: 100% ;
+    width: calc(100% - 0rem);
     border-radius: 0.75rem;
     background: transparent;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -239,7 +236,12 @@ form .btn .button {
   .register .form-container .subheading {
     font-size: 2.5rem;
     font-weight: 400;
-    margin-bottom: 2rem;
+    margin-bottom: 4rem;
+    margin-left: 3rem;
+  }
+
+  .register .form-container .be-part {
+    margin-left: 3rem;
   }
   
   .input-container {
@@ -253,25 +255,34 @@ form .btn .button {
   }
 
   .input-container.select2 {
-    width: 30.5%;
+    width: 32.5%;
     margin: 1rem 0;
   }
   
   .form-container form {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
-    border: 1px solid red;
+    width: calc(100% - 6rem);
+    padding: 0 3rem;
   }
+
+  .form-container form input {
+    padding: 1.5rem 1.5rem;
+    color: #fff;
+    width: calc(100% - 3rem);
+    margin: 1rem 0;
+    font-size: 1.5rem;
+   outline: none;
+ }
   
   .form-container form label {
-    font-size: 0.975rem;
+    font-size: 1.175rem;
   }
 
     select {
-    padding: 1.2rem 1rem;  
+    padding: 1.3rem 1rem;  
     border-radius: 3px; 
-    font-size: 1.1rem; 
+    font-size: 1.5rem; 
     }
   
   .reminder {
@@ -293,5 +304,12 @@ form .btn .button {
       margin-left: .8rem;
       font-size: 1.1rem;
   }
-  
+
+  span.error-message {
+    font-size: 0.95rem;}
+
+    form .btn .button {
+      width: 100%;
+      height: 5rem;
+    }
 }
