--- a/src/components/navBar/nav-bar.css
+++ b/src/components/navBar/nav-bar.css
@@ -147,7 +147,7 @@ background-clip: text;
       width: calc(70% - 8rem);
       flex-direction: column;
       align-items: flex-start;
-      margin-top: 22rem;
+      margin-top: 28rem;
       border-radius: 5px;
       transition: transform 0.3s ease-out;
     }
@@ -199,16 +199,29 @@ background-clip: text;
   }
 
   .nav-list {
-    font-size: 1.1rem;
+    font-size: 1.4rem;
     font-weight: 400;
-    margin-top: 1.5rem;
+    margin-top: 1.8rem;
   } 
 
   button {
-    width: 10.75rem;
-    height: 3.3125rem;
-    font-family: var(--body-font);
-    font-size: 1.1rem;
+    font-size: 1.5rem;
+}
+
+.custom-btn {
+  width: 13.0rem;
+  height: 4.5125rem;
+}
+
+.custom-button {
+  background: var(--violet);
+  width: 10.585rem;
+  height: 3.155rem;
+}
+
+ .nav-bar button {
+    width: 12.8rem;
+    height: 4.3125rem;
 }
 }
 
