--- a/src/pages/contactPage/contact-page.css
+++ b/src/pages/contactPage/contact-page.css
@@ -59,7 +59,7 @@ textarea {
   width: calc(100% - 3rem);
   margin: 1rem 0;
   border-radius: 0.25rem;
-  border: 1px solid #fff;
+  border: 1.5px solid #fff;
   outline: none;
   background: rgba(255, 255, 255, 0.03);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -90,7 +90,7 @@ span.error-message {
 
 .contact-us form .input-container.focused input:invalid,
 .input-container.focused textarea:invalid {
-  border: 1px solid var(--red);
+  border: 1.5px solid var(--red);
 }
 
 .contact-us form .input-container.focused input::placeholder,
@@ -122,11 +122,11 @@ span.error-message {
     margin-bottom: 5rem;
     text-align: center;
   }
-  
+
   .contact-info .heading {
-   display: none;
+    display: none;
   }
-  
+
   .contact-info .info {
     font-size: 1.2rem;
     margin: 1.5rem 0;
@@ -138,7 +138,7 @@ span.error-message {
     position: absolute;
     margin-top: 115rem;
   }
-  
+
   .contact-us form {
     padding: 0rem 1rem 6rem 1rem;
     width: calc(100% - 2rem);
@@ -146,10 +146,17 @@ span.error-message {
     background: transparent;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
-  
+
   .contact-us form .heading {
     font-size: 2.5rem;
     margin-bottom: 3rem;
   }
 
+  .contact-us form input,
+  textarea {
+    padding: 1.5rem 1.5rem;
+    width: calc(100% - 3rem);
+    margin: 1.5rem 0;
+    font-size: 1.5rem;
+  }
 }
